test: routes & services unit test coverage
enviroment for tests (Jest, supertest, test database in Postgres, test env), usit tests for services (database abstraction layer) and routes

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,4 +22,5 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: pass
-      POSTGRES_DB: dev_db
+    volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
