--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "Back-end of simple full-stack application for tracking issues.",
   "main": "server.js",
   "dependencies": {
+    "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.3.0",
@@ -12,11 +13,14 @@
     "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "nodemon": "^2.0.6"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1"
   },
   "scripts": {
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "cross-env NODE_ENV=test && jest --detectOpenHandles --verbose"
   },
   "keywords": [],
   "author": "Sebastian Łuszczek",
