--- a/api/src/config/config.json
+++ b/api/src/config/config.json
@@ -8,7 +8,7 @@
   },
   "test": {
     "db_name": "test_db",
-    "db_host": "postgres",
+    "db_host": "localhost",
     "db_user": "postgres",
     "db_pass": "pass",
     "db_dialect": "postgres"
