--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "description": "Back-end of simple full-stack application for tracking issues.",
   "main": "server.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
