--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,20 @@ services:
       - ./api:/app
       - '/app/node_modules'
 
+  client:
+    container_name: client
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    volumes:
+      - './client:/app'
+      - '/app/node_modules'
+    ports:
+      - 3000:3000
+    depends_on:
+      - api
+    stdin_open: true
+
   postgres:
     container_name: postgres
     image: postgres:13-alpine
